# publish-helper

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Publish Helper.exe.spec  README.md  pyproject.toml  readme.txt  requirements.txt  requirements_api.txt
docs/: CHANGELOG.md  docker_publish.md  publish-helper.yml
lib_deb/: entrypoint  libmediainfo0v5_24.04-1_amd64.Debian_12.deb  libzen0v5_0.4.41-1_amd64.Debian_12.deb  nginx.conf  sources.list
ph-bjd/: autofeed.py  ficturebed.py  main.py  mediainfo.py  picturebed.py  ptgen.py  rename.py  screenshot.py  startapi.py  startgui.py  startui.py  tool.py
ph-bjd/ui/: mainwindow.py  mainwindow.ui  settings.py  settings.ui
src/: gui.py  main.py  main_api.py  main_gui.py
src/api/: api.py  startapi.py
src/core/: autofeed.py  mediainfo.py  picturebed.py  ptgen.py  rename.py  screenshot.py  tool.py
src/gui/: startgui.py  ui_tools.py
src/gui/ui/: mainwindow.py  mainwindow.ui  settings.py  settings.ui
src/ui/: mainwindow.ui  settings.ui
static/: abbreviation.json  combo-box-data.json  picture-bed-data.json  settings.json  source.json  team.json  type.json
temp/pic/: 默认图片目录.txt
temp/torrent/: 默认种子目录.txt
